--- a/docs/api-reference/link/generate-link-token.mdx
+++ b/docs/api-reference/link/generate-link-token.mdx
@@ -18,12 +18,74 @@ curl --request POST \
 '
 ```
 
-```js JavaScript
-const user = await client.Link.create(user_id);
+```javascript Node
+import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
+import { LinkTokenExchange } from '@tryvital/vital-node/api';
+
+
+const client = new VitalClient({
+    apiKey: '<my_api_key>',
+    environment: VitalEnvironment.Sandbox,
+});
+
+const request: LinkTokenExchange = {
+    userId: "<user_id>",
+}
+const data = await client.link.token(request)
 ```
 
 ```python Python
-user = client.Link.create(user_id)
+from vital.client import Vital
+from vital.environment import VitalEnvironment
+
+vital_client = Vital(
+  api_key="YOUR_API_KEY",
+  environment=VitalEnvironment.Sandbox
+)
+
+data = client.link.token(user_id="<user_id>")
+```
+
+```java Java
+import com.vital.api.Vital;
+import com.vital.api.core.Environment;
+import com.vital.api.resources.link.requests.LinkTokenExchange;
+
+Vital vital = Vital.builder()
+     .apiKey("YOUR_API_KEY")
+     .environment(Environment.SANDBOX)
+     .build();
+
+LinkTokenExchange request = LinkTokenExchange
+     .builder()
+     .userId("<user_id>")
+     .build();
+
+var data = vital.link().token(request);
+```
+
+```go Go
+import (
+  "context"
+
+  vital "github.com/tryVital/vital-go"
+  vitalclient "github.com/tryVital/vital-go/client"
+)
+
+client := vitalclient.NewClient(
+  vitalclient.WithApiKey("<YOUR_API_KEY>"),
+  vitalclient.WithBaseURL(vital.Environments.Sandbox),
+)
+request := &vital.LinkTokenExchange{
+     UserId: "<user_id>",
+}
+
+response, err := client.Link.Token(context.TODO(), request)
+if err != nil {
+  return err
+}
+fmt.Printf("Received data %s\n", response)
+
 ```
 
 </RequestExample>
