--- a/docs/api-reference/link/link-oauth-provider.mdx
+++ b/docs/api-reference/link/link-oauth-provider.mdx
@@ -13,12 +13,61 @@ curl --request GET \
      --header 'x-vital-link-token: <VITAL-LINK-TOKEN>'
 ```
 
-```js JavaScript
-const user = await client.Link.getOAuthLink(provider);
+```javascript Node
+import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
+
+
+const client = new VitalClient({
+    apiKey: '<my_api_key>',
+    environment: VitalEnvironment.Sandbox,
+});
+
+const data = await client.link.connectOauthProvider("<provider>")
 ```
 
 ```python Python
-user = client.Link.oauth_provider(provider)
+from vital.client import Vital
+from vital.environment import VitalEnvironment
+
+vital_client = Vital(
+  api_key="YOUR_API_KEY",
+  environment=VitalEnvironment.Sandbox
+)
+
+data = client.link.connect_oauth_provider(provider="<provider>")
+```
+
+```java Java
+import com.vital.api.Vital;
+import com.vital.api.core.Environment;
+
+
+Vital vital = Vital.builder()
+      .apiKey("YOUR_API_KEY")
+      .environment(Environment.SANDBOX)
+      .build();
+
+var data = vital.link().connectOauthProvider("<provider");
+```
+
+```go Go
+import (
+  "context"
+
+  vital "github.com/tryVital/vital-go"
+  vitalclient "github.com/tryVital/vital-go/client"
+)
+
+client := vitalclient.NewClient(
+  vitalclient.WithApiKey("<YOUR_API_KEY>"),
+  vitalclient.WithBaseURL(vital.Environments.Sandbox),
+)
+
+response, err := client.Link.ConnectOauthProvider(context.TODO(), "<provider>")
+if err != nil {
+  return err
+}
+fmt.Printf("Received data %s\n", response)
 ```
 
 </RequestExample>
