--- a/docs/api-reference/link/link-password-provider.mdx
+++ b/docs/api-reference/link/link-password-provider.mdx
@@ -35,9 +35,9 @@ from vital.client import Vital
 from vital.environment import VitalEnvironment
 from vital.types.password_providers import PasswordProviders
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.link.connect_password_provider(
