--- a/docs/api-reference/user/get-users-connected-providers.mdx
+++ b/docs/api-reference/user/get-users-connected-providers.mdx
@@ -35,9 +35,9 @@ const data = await client.user.getConnectedProviders("<user_id>");
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.user.get_connected_providers("<user_id>")
