--- a/docs/api-reference/user/refresh-user-data.mdx
+++ b/docs/api-reference/user/refresh-user-data.mdx
@@ -29,9 +29,9 @@ const data = await client.user.refresh(
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.user.refresh(
