--- a/docs/api-reference/vitals/electrocardiogram_voltage.mdx
+++ b/docs/api-reference/vitals/electrocardiogram_voltage.mdx
@@ -16,9 +16,9 @@ curl --request GET \
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.vitals.electrocardiogram_voltage(
