--- a/docs/api-reference/activity/get-summary.mdx
+++ b/docs/api-reference/activity/get-summary.mdx
@@ -16,9 +16,9 @@ curl --request GET \
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.activity.get(
@@ -90,8 +90,6 @@ if err != nil {
   return err
 }
 fmt.Printf("Received data %s\n", response)
-
-	return nil
 ```
 
 </RequestExample>
