--- a/docs/api-reference/link/create-code.mdx
+++ b/docs/api-reference/link/create-code.mdx
@@ -36,9 +36,9 @@ const data = await client.link.codeCreate(request);
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.link.code_create(user_id='<my_user_id>')
