--- a/docs/api-reference/link/link-demo-provider.mdx
+++ b/docs/api-reference/link/link-demo-provider.mdx
@@ -40,9 +40,9 @@ const data = await client.link.connectDemoProvider(request);
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.link.connect_demo_provider(user_id="<user_id>", provider=DemoProviders.<provider>)
