--- a/docs/api-reference/link/link-oauth-provider.mdx
+++ b/docs/api-reference/link/link-oauth-provider.mdx
@@ -29,9 +29,9 @@ const data = await client.link.connectOauthProvider("<provider>")
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.link.connect_oauth_provider(provider="<provider>")
