--- a/docs/api-reference/user/create-sign-in-token.mdx
+++ b/docs/api-reference/user/create-sign-in-token.mdx
@@ -31,9 +31,9 @@ const data = await client.user.get_user_sign_in_token(
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.user.getUserSignInToken(
