--- a/docs/api-reference/user/delete-user.mdx
+++ b/docs/api-reference/user/delete-user.mdx
@@ -28,9 +28,9 @@ const data = await client.user.delete(
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.user.delete(
