--- a/docs/api-reference/user/deregister-a-provider.mdx
+++ b/docs/api-reference/user/deregister-a-provider.mdx
@@ -39,9 +39,9 @@ const data = await client.user.deregisterProvider(
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.user.deregister_provider(
