--- a/docs/api-reference/user/get-user.mdx
+++ b/docs/api-reference/user/get-user.mdx
@@ -29,9 +29,9 @@ const data = await client.user.get(
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.user.get(
