--- a/docs/api-reference/user/get-users.mdx
+++ b/docs/api-reference/user/get-users.mdx
@@ -26,9 +26,9 @@ const data = await client.user.getAll();
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.user.get_all()
