--- a/docs/api-reference/user/patch-user.mdx
+++ b/docs/api-reference/user/patch-user.mdx
@@ -34,9 +34,9 @@ const data = await client.user.patch(
 from vital.client import Vital
 from vital.environment import VitalEnvironment
 
-vital_client = Vital(
+client = Vital(
   api_key="YOUR_API_KEY",
-  environment=VitalEnvironment.Sandbox
+  environment=VitalEnvironment.SANDBOX
 )
 
 data = client.user.patch(
