--- a/docs/api-reference/workouts/get-summary.mdx
+++ b/docs/api-reference/workouts/get-summary.mdx
@@ -13,19 +13,83 @@ curl --request GET \
 ```
 
 ```python Python
-from vital import Client
+from vital.client import Vital
+from vital.environment import VitalEnvironment
 
-client = Client(
-  api_key=<API_KEY>,
-  environment="sandbox",
-  region="us"
+client = Vital(
+  api_key="YOUR_API_KEY",
+  environment=VitalEnvironment.SANDBOX
 )
 
-data = client.Workouts.get(
-     user_id=*,
-     start_date="2022-05-01",
-     end_date="2022-06-01"
+data = client.workouts.get(
+    user_id="<user_id>",
+    start_date="2022-05-01",
+    end_date="2022-06-01"
 )
+```
+
+```javascript Node
+import { VitalClient, VitalEnvironment } from '@tryvital/vital-node';
+import { WorkoutsGetRequest } from '@tryvital/vital-node/api/resources/workouts';
+
+const client = new VitalClient({
+    apiKey: '<my_api_key>',
+    environment: VitalEnvironment.Sandbox,
+});
+
+const request: WorkoutsGetRequest = {
+    startDate: "2022-05-01",
+    endDate: "2022-06-01"
+}
+
+const data = await client.workouts.get(
+    '<my_user_id>',
+    request
+);
+```
+
+```java Java
+import com.vital.api.Vital;
+import com.vital.api.core.Environment;
+import com.vital.api.resources.workouts.requests.WorkoutsGetRequest;
+
+Vital vital = Vital.builder()
+                .apiKey("YOUR_API_KEY")
+                .environment(Environment.SANDBOX)
+                .build();
+
+WorkoutsGetRequest request = WorkoutsGetRequest.builder()
+                .startDate("2022-05-01")
+                .endDate("2022-06-01")
+                .build();
+
+var data = vital.workouts().get("<my_user_id>", request);
+```
+
+```go Go
+import (
+  "context"
+
+  vital "github.com/tryVital/vital-go"
+  vitalclient "github.com/tryVital/vital-go/client"
+)
+
+client := vitalclient.NewClient(
+  vitalclient.WithApiKey("<YOUR_API_KEY>"),
+  vitalclient.WithBaseURL(vital.Environments.Sandbox),
+)
+
+EndDate := "2022-06-01"
+request := &vital.WorkoutsGetRequest{
+  StartDate: "2022-05-01",
+  EndDate:   &EndDate,
+}
+
+response, err := client.Workouts.Get(context.TODO(), "*", request)
+if err != nil {
+  return err
+}
+fmt.Printf("Received data %s\n", response)
 ```
 
 </RequestExample>
